fix bugs in OneShotCausalDriver